mm_web_app/styles/pages/_home.scss
/* ... */
.topic-tree {
 .container-masonry {
    z-index: 1;
    margin-top: 50px;
    .grid-row {
      .grid-item--full {
        background: url("/static/images/balls.svg") no-repeat center gray;
        iframe {
          z-index: 1;
          min-height: 90vh;
          height: 100%;
        }
      }
      .discovery-list {
        .resizable {
          .grid-item--full {
            z-index: 1000;
            position: fixed;
            background: url("/static/images/balls.svg") no-repeat center gray;
            .close_button {
              z-index: 9999;
              position: absolute;
              width: 40px;
              height: 40px;
              top: -16px;
              right: -16px;
              border: 0;
              background: $close-btn-img no-repeat center center;
              &:hover {
                text-decoration: none;
                cursor: pointer;
              }
            }
            iframe {
              z-index: 1;
              background: #fff;
              min-height: 65vh;
              height: 100%;
            }
          }
          .on-resize {
            background: #2db7f5;
            height: 100vh !important;
            width: 100%;
          }
          & > :not(:first-child) {
            background: #2db7f5;
            height: 100vh !important;
            z-index: 999;
          }
        }
        .split-view {
          height: 90vh;
          overflow: auto;
          .grid-item {
            width: 310px;
          }
        }
      }
      .grid-sizer, .grid-item {
        width: 20%;
        @include border-radius(5px);
        &::before {
          @include transform(scale(0.96));
          @include border-radius(5px);
          @include abs-pos ($top: 0, $right: 0, $bottom: 0, $left: 0);
          @include transition (all 0.3s cubic-bezier(.25, .8, .25, 1));
          -webkit-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24);
          -moz-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24);
          box-shadow: 0 0px 5px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24);
          opacity: 0;
          content: " ";
          height: 100%;
          width: 100%;
          pointer-events: none;
          z-index: 3;
        }
        &:hover::before {
          -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2), 0 3px 9px rgba(0, 0, 0, 0.18);
          -moz-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2), 0 3px 9px rgba(0, 0, 0, 0.18);
          box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2), 0 3px 9px rgba(0, 0, 0, 0.18);
          -webkit-animation: tapAnimation 0.25s cubic-bezier(0.31, 1, 0.34, 1) forwards;
          animation: tapAnimation 0.25s cubic-bezier(0.31, 1, 0.34, 1) forwards;
        }
        @media (max-width: 1440px) {
          width: 25%;
        }
        @media (max-width: 1024px) {
          width: 33.3%;
        }
        @media (max-width: 750px) {
          width: 50%;
        }
        @media (max-width: 550px) {
          width: 100%;
        }
        .thumbnail-box {
          .thumbnail-image {
            @include border-radius(4px);
            min-height: 240px;
            position: relative;
            display: block;
            overflow: hidden;
            .discovery-title {
              color: #fff;
            }
            .caption {
              @include abs-pos ($top: auto, $right: 0, $bottom: 50px, $left: auto);
              width: 100%;
              .mix-tag {
                z-index: 1;
                .tags {
                  @include border-radius(20px);
                  margin: 0 2.5px;
                  padding: 10px;
                  font-size: 1.5rem;
                  text-align: left;
                  line-height: 30px;
                  border:1px solid #ccc;
                }
              }
            }
            img {
              @include border-radius(8px);
              object-fit: contain;
              margin: 0 auto;
              display: block;
            }
            &.active::before {
              content: '';
              position: absolute;
              top: 0;
              right: 0;
              bottom: 0;
              left: 0;
              background-image: linear-gradient(to bottom right,#000,#fff);
              opacity: .01;
            }
            &::before {
              content: '';
              position: absolute;
              top: 0;
              right: 0;
              bottom: 0;
              left: 0;
              background-image: linear-gradient(to bottom right,#000,#fff);
              opacity: .85;
            }
            &:hover {
              .discovery-title {
                background: #fff;
                color: #000;
              }
              &::before {
                content: '';
                position: absolute;
                top: 0;
                right: 0;
                bottom: 0;
                left: 0;
                background-image: linear-gradient(to bottom right,#000,#fff);
                opacity: .01;
              }
            }
          }
          input.select-topic {
            position: absolute;
            visibility: hidden;
            top: 0;
            right: 0;
            -webkit-appearance:none;
            width:40px;
            height:40px;
            background-color: #fff;
            border-radius:2px;
            border:1px solid #ccc;
            transition: all .3s linear;
            cursor: pointer;
            &:checked {
              background: url('/static/images/tick.png') no-repeat center;
              background-size: contain;
              background-color: #fff;
              visibility: visible;
            }
          }
        }
        &:hover {
          input.select-topic {
            visibility: visible;
          }
        }
      }
    }
  }
}
/* ... */

